--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -16,7 +16,7 @@
             </MenuItem>-->
             <!--<MenuItem Header="_Справочники">-->
             <MenuItem Command="{Binding OpenWordsCommand}"
-                      Header="_Слова" />
+                      Header="_Словарь" />
 
             <MenuItem Header="_Вид">
                 <MenuItem IsCheckable="true"
