--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -15,19 +15,42 @@
     <UserControl.Resources>
         <Style x:Key="SexCheckbox"
                TargetType="{x:Type CheckBox}">
+            <Setter Property="IsTabStop"
+                    Value="False" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type CheckBox}">
                         <TextBlock x:Name="sign"
-                                   FontSize="17"
-                                   HorizontalAlignment="Center"
-                                   Margin="0,-2,0,0"
-                                   Text="{Binding IsChecked, Mode=OneWay, Converter={StaticResource SexToSign}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" />
+                                   Style="{StaticResource SexTooltip}"
+                                   HorizontalAlignment="Center">
+                            <TextBlock.Text>
+                                <MultiBinding Converter="{StaticResource SexToSign}" Mode="OneWay">
+                                    <Binding Path="IsChecked" 
+                                             RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}" />
+                                    <Binding Path="DataContext.Sexes"
+                                             RelativeSource="{RelativeSource AncestorType=Window}" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
-       
+        <DataTemplate x:Key="SexTemplate">
+            <TextBlock Style="{StaticResource SexTooltip}"
+                       Margin="2,0,2,0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
+                <TextBlock.Text>
+                    <MultiBinding Converter="{StaticResource SexToSign}">
+                        <Binding Path="IsMale" />
+                        <Binding Path="DataContext.Sexes"
+                                 RelativeSource="{RelativeSource AncestorType=Window}" />
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </DataTemplate>
+
     </UserControl.Resources>
 
     <Grid HorizontalAlignment="Stretch"
@@ -97,10 +120,13 @@
                 <DataGridTextColumn Header="Имя"
                                     IsReadOnly="True"
                                     Binding="{Binding FullNameOrCreatedAt, Mode=OneWay}" />
-                <DataGridCheckBoxColumn Header="Пол"
+                <!--<DataGridCheckBoxColumn Header="Пол"
                                         IsReadOnly="True"
                                         Binding="{Binding IsMale, Mode=OneWay}"
-                                        ElementStyle="{StaticResource SexCheckbox}" />
+                                        ElementStyle="{StaticResource SexCheckbox}" />-->
+                <DataGridTemplateColumn Header="Пол"
+                                        IsReadOnly="True"
+                                        CellTemplate="{StaticResource SexTemplate}" />
                 <DataGridTextColumn Header="Возраст"
                                     IsReadOnly="True"
                                     Binding="{Binding Age, Mode=OneWay}" />
