ui. Fix datagrid sorting

--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -125,6 +125,7 @@
                                         Binding="{Binding IsMale, Mode=OneWay}"
                                         ElementStyle="{StaticResource SexCheckbox}" />-->
                 <DataGridTemplateColumn Header="Пол"
+                                        SortMemberPath="IsMale"
                                         IsReadOnly="True"
                                         CellTemplate="{StaticResource SexTemplate}" />
                 <DataGridTextColumn Header="Возраст"
