--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -72,7 +72,7 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal"
                                     Visibility="{Binding Categories.Count, Converter={StaticResource MoreThanToVisibility}}">
-                            <TextBlock Text="типы записей: "></TextBlock>
+                            <TextBlock Text="категории: "></TextBlock>
                             <controls:CommaList ItemsSource="{Binding Categories}" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal"
@@ -118,7 +118,7 @@
                     <KeyBinding Key="Enter"
                                 Command="{Binding SearchCommand}" />
                 </StackPanel.InputBindings>
-                <Label>_Ключевые слова</Label>
+                <Label>Ключевые _слова</Label>
                 <search:Autocomplete DataContext="{Binding Autocomplete}" />
                 <DockPanel Style="{StaticResource line}">
                     <Grid>
@@ -136,6 +136,7 @@
                         </CheckBox>
                     </Grid>
                 </DockPanel>
+                <Label>_Категории</Label>
                 <DockPanel Style="{StaticResource line}"
                            HorizontalAlignment="Left">
                     <editors:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
