--- a/Diagnosis.App/Windows/DebugWindow.xaml
+++ b/Diagnosis.App/Windows/DebugWindow.xaml
@@ -1,13 +1,70 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:win="clr-namespace:Diagnosis.App.Windows"
         WindowStartupLocation="Manual"
-        ShowInTaskbar="False"
+        ShowInTaskbar="True"
         ShowActivated="False"
-        Topmost="True"
+        Topmost="{Binding IsChecked,
+                          ElementName=topMost}"
         Title="Debug"
-        Width="450">
-    <Grid>
+        Width="{Binding Path=Default.DebugWindowWidth,
+                        Mode=TwoWay,
+                        Source={StaticResource Settings}}"
+        Left="{Binding Path=Default.DebugWindowLeft,
+                       Mode=TwoWay,
+                       Source={StaticResource Settings}}">
+    <Window.Resources>
+        <Style TargetType="ListBox"
+               x:Key="LogViewerStyle">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <ScrollViewer CanContentScroll="True">
+                            <ItemsPresenter />
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel IsItemsHost="True" />
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <DataTemplate DataType="{x:Type win:LogEntry}">
+            <Grid IsSharedSizeScope="True">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition SharedSizeGroup="Index"
+                                      Width="Auto" />
+                    <ColumnDefinition SharedSizeGroup="Date"
+                                      Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="{Binding DateTime,
+                                          StringFormat={}[{0:HH:mm:ss}]}"
+                           Grid.Column="0"
+                           FontWeight="Bold"
+                           Margin="5,0,5,0" />
+
+                <TextBlock Text="{Binding Index}"
+                           Grid.Column="1"
+                           FontWeight="Bold"
+                           Margin="0,0,2,0" />
+
+                <TextBlock Text="{Binding Message}"
+                           Grid.Column="2"
+                           TextWrapping="Wrap" />
+            </Grid>
+        </DataTemplate>
+    </Window.Resources>
+
+    <!--<Grid>
         <TextBox ScrollViewer.VerticalScrollBarVisibility="Auto"
                  x:Name="Log"
                  Grid.Row="1"
@@ -17,5 +74,33 @@
                  Height="Auto"
                  Margin="0,10,0,0"
                  VerticalContentAlignment="Stretch" />
-    </Grid>
+    </Grid>-->
+
+    <DockPanel>
+        <DockPanel DockPanel.Dock="Bottom">
+            <ToggleButton Content="On"
+                          Height="36"
+                          Width="36"
+                          IsChecked="{Binding FilterOn}" />
+            <ToggleButton Content="Top"
+                          x:Name="topMost"
+                          Height="36"
+                          Width="36"
+                          Margin="2,0" />
+            <TextBox Margin="5"
+                     Text="{Binding FilterContains,
+                                    UpdateSourceTrigger=PropertyChanged}" />
+        </DockPanel>
+
+        <ListBox x:Name="items"
+                 ItemsSource="{Binding LogEntries}"
+                 Style="{StaticResource LogViewerStyle}">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Visibility"
+                            Value="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+    </DockPanel>
 </Window>
