--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -226,8 +226,8 @@
                Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
             <ListBox x:Name="records"
@@ -390,7 +390,7 @@
                     </ContextMenu>
                 </ListBox.ContextMenu>
             </ListBox>
-            <ListBox x:Name="recordsOrder"
+            <!--<ListBox x:Name="recordsOrder"
                      ItemsSource="{Binding Source={StaticResource ordView}}"
                      BorderThickness="0"
                      HorizontalContentAlignment="Stretch"
@@ -413,7 +413,7 @@
                         <card:HealthRecord Margin="0,0,0,5" />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
-            </ListBox>
+            </ListBox>-->
         </Grid>
     </Grid>
 </UserControl>
