--- a/Diagnosis.App/Styles/BeforeThemeStyles.xaml
+++ b/Diagnosis.App/Styles/BeforeThemeStyles.xaml
@@ -20,6 +20,13 @@
                 Value="23" />
         <Setter Property="VerticalContentAlignment"
                 Value="Center" />
+        <Style.Triggers>
+            <Trigger Property="IsReadOnly"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="LightGray" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
     
     <Style BasedOn="{StaticResource ErrorToolTip}"
