--- a/Diagnosis.App/Styles/AfterThemeStyles.xaml
+++ b/Diagnosis.App/Styles/AfterThemeStyles.xaml
@@ -1,7 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Styles/MahAppsFix.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Styles/DefaultExpander.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+    
     <!--This styles overwrites theme styles-->
-
+    
+    <Style TargetType="ListBoxItem"
+           BasedOn="{StaticResource MetroListBoxItemFixed}" />
+    <Style TargetType="Expander"
+           BasedOn="{StaticResource DefaultExpander}" />
+    
     <!--  base control styles  -->
 
     <Style BasedOn="{StaticResource {x:Type DatePicker}}"
