--- a/Diagnosis.App/Windows/AdminSettingsWindow.xaml
+++ b/Diagnosis.App/Windows/AdminSettingsWindow.xaml
@@ -9,7 +9,8 @@
         ShowInTaskbar="False"
         ResizeMode="NoResize"
         Width="300"
-        WindowStartupLocation="CenterOwner">
+        WindowStartupLocation="CenterOwner"
+        UseLayoutRounding="True">
     <Window.Resources>
         <Style TargetType="DockPanel"
                BasedOn="{StaticResource formLine}">
