--- a/Diagnosis.App/Windows/Editors/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/AppointmentEditorWindow.xaml
@@ -10,8 +10,7 @@
         beh:DialogCloser.DialogResult="{Binding DialogResult}"
         beh:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False"
-        ResizeMode="NoResize"
-        WindowStyle="ToolWindow">
+        ResizeMode="NoResize">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
