--- a/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
@@ -10,8 +10,9 @@
         Width="400"
         MinWidth="200"
         beh:DialogCloser.DialogResult="{Binding DialogResult}"
+        ResizeMode="NoResize"
         ShowInTaskbar="False"
-        WindowStyle="ToolWindow">
+        UseLayoutRounding="True">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
