--- a/Diagnosis.App/Windows/Editors/WordEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/WordEditorWindow.xaml
@@ -11,7 +11,7 @@
         beh:DialogCloser.DialogResult="{Binding DialogResult}"
         beh:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False"
-        WindowStyle="ToolWindow">
+        UseLayoutRounding="True">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
