--- a/Diagnosis.App/Windows/SettingsWindow.xaml
+++ b/Diagnosis.App/Windows/SettingsWindow.xaml
@@ -8,6 +8,7 @@
         SizeToContent="WidthAndHeight"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
+        UseLayoutRounding="True"
         WindowStartupLocation="CenterOwner">
     <Window.Resources>
     </Window.Resources>
